Добавляет блок контакты

--- a/source/index.html
+++ b/source/index.html
@@ -16,11 +16,15 @@
 </head>
 
 <body>
+
   <div class="wrapper main-wrapper">
+
     <div data-test="slider">
 
       <header class="header" data-header="container">
+
         <div class="container">
+
           <a class="header__link">
             <img src="img/svg/logotype.svg" alt="Лого" width="52" height="52">
           </a>
@@ -116,10 +120,13 @@
               </li>
             </ul>
           </nav>
+
         </div>
+
       </header>
 
       <section class="hero">
+
         <h1 class="visually-hidden">Проект "Стажировка"</h1>
 
         <div class="swiper hero__swiper" data-hero="swiper">
@@ -238,7 +245,9 @@
               </div>
             </div>
           </div>
+
         </div>
+
       </section>
 
     </div>
@@ -248,8 +257,11 @@
       <div class="main-wrapper">
 
         <div data-test="about" id="about">
+
           <div class="container">
+
             <section class="about">
+
               <div class="about__container">
                 <h2 class="about__title">О проекте «Стажировка»</h2>
                 <div class="about__description">
@@ -278,9 +290,11 @@
                   </span>
                 </button>
               </div>
+
             </section>
 
             <section class="advantages">
+
               <h2 class="visually-hidden">Преимущества проекта «Стажировка»</h2>
               <ul class="advantages__list">
 
@@ -348,21 +362,289 @@
                   </div>
                 </li>
               </ul>
+
             </section>
+
           </div>
+
         </div>
 
-        <div data-test="programs" id="programs"></div>
+        <div data-test="programs" id="programs">
 
-        <div data-test="grant" id="grant"></div>
+          <section class="programs">
 
-        <div data-test="news" id="news"></div>
+            <!-- Программы -->
 
-        <div data-test="FAQ"></div>
+          </section>
 
-        <div data-test="reviews" id="reviews"></div>
+        </div>
 
-        <div data-test="contacts" id="contacts"></div>
+        <div data-test="grant" id="grant">
+
+          <section class="grant">
+
+            <div class="container">
+
+              <div class="grant__wrapper">
+                <h2 class="grant__title">Как поехать</h2>
+
+                <div class="grant__content">
+                  <p>
+                    Свяжитесь с координатором, чтобы узнать полную информацию. Вы получите актуальные сведения о доступных программах <br>и городах,
+                    в которых можете пройти программу.
+                  </p>
+                </div>
+
+                <div class="grant__image">
+                  <picture>
+                    <source type="image/webp" media="(max-width: 767px)" srcset="img/grant/mobile/photo-1.webp 1x, img/grant/mobile/photo-1@2x.webp 2x">
+                    <source type="image/webp" media="(max-width: 1439px)" srcset="img/grant/tablet/photo-1.webp 1x, img/grant/tablet/photo-1@2x.webp 2x">
+                    <source type="image/webp" srcset="img/grant/photo-1.webp 1x, img/grant/photo-1@2x.webp 2x">
+
+                    <source type="image/jpg" media="(max-width: 767px)" srcset="img/grant/mobile/photo-1.jpg 1x, img/grant/mobile/photo-1@2x.jpg 2x">
+                    <source type="image/jpg" media="(max-width: 1439px)" srcset="img/grant/tablet/photo-1.jpg 1x, img/grant/tablet/photo-1@2x.jpg 2x">
+                    <img src="img/grant/photo-1.jpg" srcset="img/grant/photo-1@2x.jpg 2x" width="498" height="363" alt="Столб с указателями">
+                  </picture>
+                </div>
+              </div>
+
+              <div class="grant__wrapper">
+                <h3 class="grant__subtitle">Чтобы получить грант на обучение, вам нужно:</h3>
+
+                <ol class="grant__list" data-list="grant">
+                  <li class="grant__item">
+                    <span class="grant__item-count" data-list="count">4</span>
+                    <p>
+                      Быть в возрасте от 16 до 30 лет
+                    </p>
+                  </li>
+
+                  <li class="grant__item">
+                    <span class="grant__item-count" data-list="count">4</span>
+                    <p>
+                      Иметь оконченное среднее образование
+                    </p>
+                  </li>
+
+                  <li class="grant__item">
+                    <span class="grant__item-count" data-list="count">4</span>
+                    <p>
+                      Иметь документально подтверждённое отсутствие судимости и пройти консульскую проверку
+                    </p>
+                  </li>
+
+                  <li class="grant__item">
+                    <span class="grant__item-count" data-list="count">4</span>
+                    <p>
+                      За последние 2 года быть <br>не больше 3х месяцев подряд непрерывно в одной стране
+                    </p>
+                  </li>
+                </ol>
+              </div>
+
+            </div>
+
+          </section>
+
+        </div>
+
+        <div data-test="news" id="news">
+
+          <section class="news">
+
+            <!-- Новости и материалы -->
+
+          </section>
+
+        </div>
+
+        <div data-test="FAQ">
+
+          <section class="faq">
+
+            <div class="container">
+
+              <h2 class="faq__title">Вопросы и ответы</h2>
+
+              <div class="faq__accordion" data-accordion="parent">
+
+                <!-- Вопрос 1 -->
+                <div class="faq__element faq__element--programs" data-accordion="element">
+                  <div class="faq__container" data-accordion="button">
+
+                    <div class="faq__question">
+                      <div class="faq__question-text">
+                        <h3>Кто организатор? Какие сроки у программы?</h3>
+                      </div>
+                      <button type="button">
+                        <span class="visually-hidden">Раскрыть элемент</span>
+                      </button>
+                    </div>
+                    <div class="faq__content" data-accordion="content">
+                      <p>
+                        Организатором программы является проект “Маса” в сотрудничестве с образовательными учреждениями.
+                        Сроки программы обмена могут варьироваться от одного семестра до года.
+                      </p>
+                    </div>
+
+                  </div>
+                </div>
+
+                <!-- Вопрос 2 -->
+                <div class="faq__element faq__element--grant" data-accordion="element">
+                  <div class="faq__container" data-accordion="button">
+
+                    <div class="faq__question">
+                      <div class="faq__question-text">
+                        <h3>Что такое грант <br class="br-mobile">на обучение?</h3>
+                      </div>
+                      <button type="button">
+                        <span class="visually-hidden">Раскрыть элемент</span>
+                      </button>
+                    </div>
+                    <div class="faq__content" data-accordion="content">
+                      <p>
+                        Грант на обучение - это финансовая поддержка, которую предоставляет организатор
+                        программы обмена студентами для оплаты учебных расходов.
+                      </p>
+                    </div>
+
+                  </div>
+                </div>
+
+                <!-- Вопрос 3 -->
+                <div class="faq__element faq__element--price is-active" data-accordion="element">
+                  <div class="faq__container" data-accordion="button">
+
+                    <div class="faq__question">
+                      <div class="faq__question-text">
+                        <h3>Как определяется стоимость программы?</h3>
+                      </div>
+                      <button type="button">
+                        <span class="visually-hidden">Раскрыть элемент</span>
+                      </button>
+                    </div>
+                    <div class="faq__content" data-accordion="content">
+                      <p>
+                        Полная стоимость определяется организаторами в зависимости <br class="br-tablet-mobile">от направления.
+                        <br class="br-desktop">В большинстве случаев грант «Стажировка» <br class="br-mobile">не покрывает <br class="br-tablet">полную стоимость программы,
+                        <br class="br-desktop">и поэтому предусматривается <br class="br-tablet">определённая доля личного участия.
+                      </p>
+                    </div>
+
+                  </div>
+                </div>
+
+                <!-- Вопрос 4 -->
+                <div class="faq__element faq__element--study" data-accordion="element">
+                  <div class="faq__container" data-accordion="button">
+
+                    <div class="faq__question">
+                      <div class="faq__question-text">
+                        <h3>Признаётся ли учёба <br class="br-mobile">в рамках проекта <br class="br-desktop-tablet">для дальнейшего обучения?</h3>
+                      </div>
+                      <button type="button">
+                        <span class="visually-hidden">Раскрыть элемент</span>
+                      </button>
+                    </div>
+                    <div class="faq__content" data-accordion="content">
+                      <p>
+                        Студенты, участвующие в проекте, могут использовать полученные знания и навыки в своей будущей профессиональной
+                        деятельности или продолжить обучение в высших учебных заведениях.
+                        Кроме того, многие университеты и колледжи предоставляют кредиты за участие в программе обмена студентами.
+                      </p>
+                    </div>
+                  </div>
+
+                  </div>
+
+                <!-- Вопрос 5 -->
+                <div class="faq__element faq__element--registration" data-accordion="element">
+                  <div class="faq__container" data-accordion="button">
+
+                    <div class="faq__question">
+                      <div class="faq__question-text">
+                        <h3>Как выглядит полный процесс регистрации <br>на программу <br class="br-mobile">«Стажировка»?</h3>
+                      </div>
+                      <button type="button">
+                        <span class="visually-hidden">Раскрыть элемент</span>
+                      </button>
+                    </div>
+                    <div class="faq__content" data-accordion="content">
+                      <p>
+                        Процесс регистрации на программу обмена включает выбор университета-партнера и программы обмена,
+                        общение с координатором программы, заполнение заявления и предоставление необходимых документов,
+                        прохождение интервью, оформление визы, жилья и страховки, обучение по безопасности за границей и
+                        подписание договора об участии в программе. Подробнее можно узнать позвонив в центр.
+                      </p>
+                    </div>
+
+                  </div>
+                </div>
+              </div>
+
+            </div>
+
+          </section>
+
+        </div>
+
+        <div data-test="reviews" id="reviews">
+
+          <section class="reviews">
+
+            <!-- Отзывы -->
+
+          </section>
+
+        </div>
+
+        <div data-test="contacts" id="contacts">
+
+          <section class="contacts">
+
+            <div class="container">
+
+              <div class="contacts__top">
+
+                <h2 class="contacts__title">Контакты</h2>
+
+                <dl class="contacts__list">
+                  <div class="contacts__group">
+                    <dt class="contacts__name">центральный офис</dt>
+                    <dd class="contacts__text">г. Новосибирск, ул. Щетинкина 68, культурный центр</dd>
+                  </div>
+
+                  <div class="contacts__group">
+                    <dt class="contacts__name">Телефон</dt>
+                    <dd class="contacts__text"><a href="tel:+796387687676">+7 963 876 876 76</a></dd>
+                  </div>
+
+                  <div class="contacts__group">
+                    <dt class="contacts__name">Email</dt>
+                    <dd class="contacts__text"><a href="mailto:Info@stazh.ru">Info@stazh.ru</a></dd>
+                  </div>
+                </dl>
+
+              </div>
+
+              <div class="contacts__map">
+                <picture>
+                  <source type="image/webp" media="(max-width: 767px)" srcset="img/map/mobile/map.webp 1x, img/map/mobile/map@2x.webp 2x">
+                  <source type="image/webp" media="(max-width: 1365px)" srcset="img/map/tablet/map.webp 1x, img/map/tablet/map@2x.webp 2x">
+                  <source type="image/webp" srcset="img/map/map.webp 1x, img/map/map@2x.webp 2x">
+
+                  <source type="image/jpg" media="(max-width: 767px)" srcset="img/map/mobile/map.jpg 1x, img/map/mobile/map@2x.jpg 2x">
+                  <source type="image/jpg" media="(max-width: 1365px)" srcset="img/map/tablet/map.jpg 1x, img/map/tablet/map@2x.jpg 2x">
+                  <img src="img/map/map.jpg" srcset="img/map/map@2x.jpg 2x" width="1240" height="500" alt="Карта местонахождения">
+                </picture>
+              </div>
+
+            </div>
+
+          </section>
+
+        </div>
 
         <div data-test="form"></div>
 
@@ -372,7 +654,11 @@
 
     <footer class="footer">
 
-      <div data-test="footer"></div>
+      <div data-test="footer">
+
+        <!-- Футер -->
+
+      </div>
 
     </footer>
 
@@ -383,7 +669,9 @@
     <div class="modal__wrapper">
       <div class="modal__overlay" data-close-modal></div>
       <div class="modal__content">
+
         <div class="form">
+
           <span class="form__title">Напишите нам</span>
           <p class="form__text">Оставьте ваши контакты, <br>если у вас остались вопросы — мы на них ответим!</p>
 
@@ -393,26 +681,26 @@
 
               <p class="form__group" data-validate-type="text" data-limitation="name" data-on-input-validate
               data-message-base="Поле обязательно к заполнению" data-message-extra="Проверьте корректность заполнения поля" data-required>
-                <label for="name">Имя</label>
                 <input type="text" id="name" name="name" required>
+                <label for="name">Имя</label>
               </p>
 
               <p class="form__group" data-validate-type="phone" data-on-input-validate data-message-base="Поле обязательно к заполнению"
               data-message-extra="Проверьте корректность заполнения поля" data-message-success="Поле заполнено верно" data-required>
-                <label for="phone">Телефон</label>
                 <input type="tel" id="phone" name="phone" required>
+                <label for="phone">Телефон</label>
               </p>
 
               <p class="form__group">
-                <label for="city">Телефон</label>
-                <select name="city" id="city" value="" required>
+                <select name="city" id="city" required>
                   <option value=""></option>
                   <option value="Moskow">Москва</option>
-                  <option value="St. Petersburg">Санкт-Петерберг</option>
+                  <option value="St. Petersburg">Санкт-Петербург</option>
                   <option value="Nizhny Novgorod">Нижний Новгород</option>
                   <option value="Rostov-on-Don">Ростов-на-Дону</option>
                   <option value="Kaluga">Калуга</option>
                 </select>
+                <label for="city">Выберите город</label>
                 <svg aria-hidden="true" focusable="false" width="16" height="16">
                   <use href="__spritemap#sprite-arrow-down"></use>
                 </svg>
@@ -432,23 +720,25 @@
                 </span>
               </button>
 
+              <button class="modal__close-btn btn-reset" type="reset" aria-label="Закрыть попап" data-close-modal>
+                <svg width="18" height="18">
+                  <use xlink:href="__spritemap#sprite-cross"></use>
+                </svg>
+              </button>
+
             </form>
 
           </div>
 
         </div>
 
-        <button class="modal__close-btn btn-reset" type="button" aria-label="Закрыть попап" data-close-modal>
-          <svg width="18" height="18">
-            <use xlink:href="__spritemap#sprite-cross"></use>
-          </svg>
-        </button>
       </div>
     </div>
   </div>
 
   <script src="js/vendor.js" type="module"></script>
   <script type="module" src="js/main.js"></script>
+
 </body>
 
 </html>
