--- a/source/index.html
+++ b/source/index.html
@@ -667,7 +667,7 @@
   <!-- Модалка -->
   <div class="modal modal--preload modal--fit-content modal--no-scale" data-modal="success">
     <div class="modal__wrapper">
-      <div class="modal__overlay" data-close-modal></div>
+      <div class="modal__overlay" data-close-modal="true"></div>
       <div class="modal__content">
 
         <div class="form">
@@ -677,7 +677,7 @@
 
           <div class="form__container">
 
-            <form action="https://echo.htmlacademy.ru" method="post">
+            <form action="https://echo.htmlacademy.ru" method="post" target="_blank">
 
               <p class="form__group" data-validate-type="text" data-limitation="name" data-on-input-validate
               data-message-base="Поле обязательно к заполнению" data-message-extra="Проверьте корректность заполнения поля" data-required>
@@ -693,7 +693,7 @@
 
               <p class="form__group">
                 <select name="city" id="city" required>
-                  <option value=""></option>
+                  <option value="" label="   "></option>
                   <option value="Moskow">Москва</option>
                   <option value="St. Petersburg">Санкт-Петербург</option>
                   <option value="Nizhny Novgorod">Нижний Новгород</option>
@@ -720,9 +720,9 @@
                 </span>
               </button>
 
-              <button class="modal__close-btn btn-reset" type="reset" aria-label="Закрыть попап" data-close-modal>
+              <button class="modal__close-btn btn-reset" type="reset" aria-label="Закрыть попап" data-close-modal="true">
                 <svg width="18" height="18">
-                  <use xlink:href="__spritemap#sprite-cross"></use>
+                  <use href="__spritemap#sprite-cross"></use>
                 </svg>
               </button>
 
